...
        TextButton(
            modifier = Modifier.testTag(GeneralTimePopUpTestTags.CONFIRM_BUTTON),
            onClick = {
              val pickedTime = LocalTime.of(state.hour, state.minute)
              onConfirm(pickedTime)
            }) {
              Text("OK")
            }
      },
      dismissButton = {
        TextButton(
            onClick = onDismiss,
            modifier = Modifier.testTag(GeneralTimePopUpTestTags.CANCEL_BUTTON)) {
...
      }
}

object GeneralTimePopUpTestTags {
  val TIME_PICKER_DIALOG = "time_picker_dialog"
  val TIME_PICKER = "time_picker"
  val CONFIRM_BUTTON = "confirm_button"
  val CANCEL_BUTTON = "cancel_button"
}

